--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,16 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background: linear-gradient(270deg, #f8ffae, #43c6ac, #f8ffae);
+            background-size: 600% 600%;
+            animation: gradientBackground 12s ease infinite;
             overflow: hidden;
         }
 
-        #particles-js {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: #282828;
-            z-index: -1;
+        @keyframes gradientBackground {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
@@ -58,10 +59,53 @@
         .recommendation-description {
             margin-top: 10px;
         }
+
+        /* Flying animation styles */
+        .fly {
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.6);
+            border-radius: 50%;
+            animation: fly 20s linear infinite;
+        }
+
+        .fly:nth-child(1) {
+            width: 50px;
+            height: 50px;
+            top: 10%;
+            left: -10%;
+            animation-delay: 0s;
+        }
+
+        .fly:nth-child(2) {
+            width: 100px;
+            height: 100px;
+            top: 30%;
+            left: -20%;
+            animation-delay: 5s;
+        }
+
+        .fly:nth-child(3) {
+            width: 75px;
+            height: 75px;
+            top: 60%;
+            left: -15%;
+            animation-delay: 10s;
+        }
+
+        @keyframes fly {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(110vw);
+            }
+        }
     </style>
 </head>
 <body>
-    <div id="particles-js"></div>
+    <div class="fly"></div>
+    <div class="fly"></div>
+    <div class="fly"></div>
     <div class="container">
         <h1>Course Recommendation System</h1>
         <form action="/recommend" method="post">
@@ -89,10 +133,6 @@
         {% endif %}
     </div>
 
-    <!-- Particles.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!-- Particles.js config -->
-    <script src="{{ url_for('static', filename='particles-config.js') }}"></script>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
