--- a/frontend/course-recommendation/src/components/CampusPage.css
+++ b/frontend/course-recommendation/src/components/CampusPage.css
@@ -6,6 +6,24 @@
   position: relative;
 }
 
+.settings-icon-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10; /* Ensure the icon is above other elements */
+}
+
+.settings-icon {
+  cursor: pointer;
+  font-size: 2rem;
+  color: black; /* Changed to black */
+  transition: color 0.3s;
+}
+
+.settings-icon:hover {
+  color: #0056b3;
+}
+
 .campus {
   flex: 1;
   display: flex;
