--- a/frontend/course-recommendation/src/components/Settings.css
+++ b/frontend/course-recommendation/src/components/Settings.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: url('/Users/kanishalluri/Desktop/Python/Github Projects/Course-Recommendation/Images/UBCO.jpeg') no-repeat center center;
+  background: url('/Users/kanishalluri/Desktop/Python/Github Projects/Course-Recommendation/Images/UBCO1.jpg') no-repeat center center;
   background-size: cover;
   text-align: center;
   position: relative;
@@ -13,36 +13,24 @@
 .settings-header {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Center the header content */
   align-items: center;
   padding: 10px;
-  background: rgba(0, 0, 0, 0.5);
   color: white;
 }
 
 .settings-header h1 {
   margin: 0;
-}
-
-.settings-header button {
-  padding: 5px 10px;
-  font-size: 1rem;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: white;
-  transition: background-color 0.3s ease;
-}
-
-.settings-header button:hover {
-  background-color: #0056b3;
+  font-weight: bold; /* Make the text bold */
+  color: #ffffff; /* Change the color to blue */
+  font-size: 4rem; /* Increase font size */
 }
 
 .settings-content {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: 20px; /* Add some space between the header and content */
 }
 
 .settings-content button {
